; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_color.c_freecm.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_color.c_freecm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.colormap = type { i64, i64, i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.colormap*)* @freecm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @freecm(%struct.colormap* %0) #0 {
  %2 = alloca %struct.colormap*, align 8
  store %struct.colormap* %0, %struct.colormap** %2, align 8
  %3 = load %struct.colormap*, %struct.colormap** %2, align 8
  %4 = getelementptr inbounds %struct.colormap, %struct.colormap* %3, i32 0, i32 5
  store i64 0, i64* %4, align 8
  %5 = load %struct.colormap*, %struct.colormap** %2, align 8
  %6 = getelementptr inbounds %struct.colormap, %struct.colormap* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.colormap*, %struct.colormap** %2, align 8
  %9 = getelementptr inbounds %struct.colormap, %struct.colormap* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %7, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.colormap*, %struct.colormap** %2, align 8
  %14 = getelementptr inbounds %struct.colormap, %struct.colormap* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @FREE(i64 %15)
  br label %17

17:                                               ; preds = %12, %1
  %18 = load %struct.colormap*, %struct.colormap** %2, align 8
  %19 = getelementptr inbounds %struct.colormap, %struct.colormap* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = inttoptr i64 %20 to i8*
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %28

23:                                               ; preds = %17
  %24 = load %struct.colormap*, %struct.colormap** %2, align 8
  %25 = getelementptr inbounds %struct.colormap, %struct.colormap* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @FREE(i64 %26)
  br label %28

28:                                               ; preds = %23, %17
  %29 = load %struct.colormap*, %struct.colormap** %2, align 8
  %30 = getelementptr inbounds %struct.colormap, %struct.colormap* %29, i32 0, i32 3
  %31 = load i64, i64* %30, align 8
  %32 = inttoptr i64 %31 to i8*
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %39

34:                                               ; preds = %28
  %35 = load %struct.colormap*, %struct.colormap** %2, align 8
  %36 = getelementptr inbounds %struct.colormap, %struct.colormap* %35, i32 0, i32 3
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @FREE(i64 %37)
  br label %39

39:                                               ; preds = %34, %28
  %40 = load %struct.colormap*, %struct.colormap** %2, align 8
  %41 = getelementptr inbounds %struct.colormap, %struct.colormap* %40, i32 0, i32 4
  %42 = load i64, i64* %41, align 8
  %43 = inttoptr i64 %42 to i8*
  %44 = icmp ne i8* %43, null
  br i1 %44, label %45, label %50

45:                                               ; preds = %39
  %46 = load %struct.colormap*, %struct.colormap** %2, align 8
  %47 = getelementptr inbounds %struct.colormap, %struct.colormap* %46, i32 0, i32 4
  %48 = load i64, i64* %47, align 8
  %49 = call i32 @FREE(i64 %48)
  br label %50

50:                                               ; preds = %45, %39
  ret void
}

declare dso_local i32 @FREE(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
